automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -250,7 +250,8 @@
     "cities = travel_df.to_dict('records')\n",
     "\n",
     "import pandas\n",
-    "file_name = './c'"
+    "file_name = './cities.xlsx'\n",
+    "travel_df = pandas."
    ]
   },
   {
