automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -251,7 +251,8 @@
     "\n",
     "import pandas\n",
     "file_name = './cities.xlsx'\n",
-    "travel_df = pandas."
+    "travel_df = pandas.read_excel(file_name)\n",
+    "cities = travefl_df.to_dic"
    ]
   },
   {
